Fixed nginx proxy

--- a/nginx/weam-https.conf
+++ b/nginx/weam-https.conf
@@ -116,7 +116,7 @@ server {
         proxy_redirect http://ai-recruiter-foloup-1:3000 https://${DOMAIN_NAME};
         proxy_redirect https://ai-recruiter-foloup-1:3000 https://${DOMAIN_NAME};
         sub_filter_once off;
-        sub_filter_types text/html application/json application/javascript text/plain application/xml text/xml text/css application/x-javascript text/javascript;
+        sub_filter_types application/json application/javascript text/plain application/xml text/xml text/css application/x-javascript text/javascript;
         
         # Multiple URL pattern replacements
         sub_filter 'https://ai-recruiter-foloup-1:3000' 'https://${DOMAIN_NAME}';
@@ -187,7 +187,7 @@ server {
         proxy_redirect http://ai-recruiter-foloup-1:3000 https://${DOMAIN_NAME};
         proxy_redirect https://ai-recruiter-foloup-1:3000 https://${DOMAIN_NAME};
         sub_filter_once off;
-        sub_filter_types text/html application/json application/javascript text/plain application/xml text/xml text/css application/x-javascript text/javascript;
+        sub_filter_types application/json application/javascript text/plain application/xml text/xml text/css application/x-javascript text/javascript;
         sub_filter 'https://ai-recruiter-foloup-1:3000' 'https://${DOMAIN_NAME}';
         sub_filter 'http://ai-recruiter-foloup-1:3000' 'https://${DOMAIN_NAME}';
         sub_filter 'ai-recruiter-foloup-1:3000' '${DOMAIN_NAME}';
