--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -19,8 +19,8 @@
     "dependencies": {
         "@google/generative-ai": "^0.24.1",
         "@langchain/anthropic": "^0.3.30",
-        "@langchain/core": "^0.3.70",
-        "@langchain/google-genai": "^0.2.18",
+        "@langchain/core": "1.1.7",
+        "@langchain/google-genai": "2.1.2",
         "@langchain/langgraph": "^0.4.4",
         "@langchain/mcp-adapters": "^0.6.0",
         "@langchain/openai": "^0.6.7",
