Add SearXNG integration and configuration updates (#248)
- Introduced a new SearXNG service in docker-compose.yml, including health checks and environment settings.
- Updated .env.example to include SEARXNG_TOOL_URL for configuration.
- Modified config.js to utilize the new SEARXNG_TOOL_URL for API requests.
- Added a new settings.yml file for SearXNG configuration, defining server settings and search engine options.

These changes enhance the application's capabilities by integrating SearXNG for improved search functionalities.

--- a/.env.example
+++ b/.env.example
@@ -228,3 +228,5 @@ OLLAMA_PULL_USE_SETUP=false
 NEXT_PUBLIC_ZOOM_CLIENT_SECRET=
 
 N8N_MCP_URL=https://example.com
+
+SEARXNG_TOOL_URL=http://searxng:8080
