Update environment configuration and enhance URL handling in image tools (#250)
- Added BASE_URL to .env.example for improved configuration.
- Updated INTERNAL_ENDPOINT in .env.example to include '/minio' for correct endpoint usage.
- Modified build.sh and winbuild.sh to ensure proper URL updates for localhost:9000 during environment setup.
- Enhanced geminiImageTool.js and imageTool.js to provide fallback URL construction from FRONT_URL if INTERNAL_ENDPOINT is not set, improving robustness in URL handling.

These changes streamline environment setup and enhance the flexibility of image tool URL management.

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,7 @@ OLLAMA_PULL_USE_SETUP=false
 
 #LLM Model Api URL
 FRONT_URL=http://localhost:3000
+BASE_URL=http://localhost:3000
 OPEN_AI_MODAL=https://api.openai.com/v1/models
 OPEN_AI_API_URL=https://api.openai.com
 GEMINI_API_URL=https://generativelanguage.googleapis.com
@@ -136,7 +137,7 @@ MINIO_REGEX_FILE_PATTERN="^https?://(?:localhost|minio):9000/"
 PROFILER_S3_BUCKET=sample-profiler
 # S3 bucket for backing up vector data (e.g., from Pinecone or Qdrant)
 AWS_VECTORS_BACKUP="sample-vectors-backup-bucket"
-INTERNAL_ENDPOINT=http://localhost:9000
+INTERNAL_ENDPOINT=http://localhost:9000/minio
 ENV_FILE=".env"
 
 # -------------------------------------
