fix: Add DNS resolver to nginx minio location for container IP stability
Added resolver configuration with 10s TTL to handle Docker container
IP address changes gracefully. This prevents 502 errors when MinIO
container restarts and gets a new IP address.

Changes:
- Added resolver 127.0.0.11 (Docker DNS) with 10s TTL
- Added proxy_next_upstream for automatic failover
- Added proxy_connect_timeout for better error handling

This ensures nginx always resolves the correct MinIO container IP
and handles container restarts gracefully.

--- a/nginx/weam-https.conf
+++ b/nginx/weam-https.conf
@@ -66,11 +66,18 @@ server {
 
     # MinIO Storage
     location /minio/ {
+        # Use resolver with short TTL to handle container IP changes
+        resolver 127.0.0.11 valid=10s;
+        
         proxy_pass http://minio:9000/;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-IP $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Handle upstream errors gracefully
+        proxy_connect_timeout 30s;
+        proxy_next_upstream error timeout http_502 http_503 http_504;
     }
 
     # AI Docs Service - Optimized single location
